<resources>
    <string name="app_name">Trivia</string>


    <string name="username_text">Username</string>
    <string name="username_hint">What would your username like to be?</string>
    <string name="choose_difficulty_text">Choose Difficulty</string>
    <string name="easy_text">Easy</string>
    <string name="medium_text">Medium</string>
    <string name="expert_text">Expert</string>
    <string name="genius_text">Genius</string>
    <string name="begin_game_text">Begin Game</string>
    <string name="invalid_username_text">Username cannot be empty!</string>
    <string name="valid_username_text">Welcome, %s1!</string>

    <string name="cannot_get_questions_text">Cannot get questions! Try again later!</string>
    <string name="question_counter_text">Question %d of %d</string>
    <string name="total_corrects_text">%d/%d</string>

    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="next_text">Next</string>
    <string name="previous_text">Previous</string>
    <string name="finish_text">Finish</string>

    <string name="congrats_text">Congratulations, %s!</string>
    <string name="result_text">You scored %d questions correctly in %s mode!</string>

</resources>